--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "realtime_chatting",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node app.js",
-    "dev":"nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.1",
+    "moment": "^2.30.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
